2002-10-27  Christian Stimming  <stimming@tuhh.de>

	* src/import-export/hbci/*.c: add #include config.h for correct
	i18n.

	* src/app-utils/prefs.scm, src/import-export/hbci/hbci.scm: Move
	preference creation into hbci module. Renamed that preference tab
	into "Online Banking & Importing".

	* src/import-export/hbci/*: Add Direct Debit HBCI action. More
	work on error handling and user feedback. Make the caching of the
	PIN a user preference.

	* po/de.po, po/glossary/de.po, po/POTFILES.in: Update German
	Translation.

	* configure.in, macros/openhbci.m4: Update required OpenHBCI
	version (now 0.9.3 i.e. current OpenHBCI's CVS).

	* src/app-utils/prefs.scm,
	src/import-export/qif-import/druid-qif-import.c: Add cache-PIN
	preference for HBCI. Rename preference tab to "Importing/Online".

2002-10-27  David Hampton  <hampton@employees.org>

	* src/app-utils/option-util.c
	(gnc_option_db_section_reset_widgets): New function to reset one
	section [page] of widgets at at time.

	* src/gnome-utils/dialog-options.c: The cancel button should
	always be sensitive. The OK button should only be sensitive if
	changes have been made to an option. #96465
	(gnc_options_dialog_new): (gnc_options_dialog_append_page): Move
	the reset button to be per-page instead of global. #90370

	* accounts/fr_FR/*: Frederic Lespez's fixes for the
	French account templates.
	
	* src/import-export/qif-import/druid-qif-import.c: Add a working
	directory for the qif-import code; defaults to user homedir. Use
	the working directory in the file selection dialog and track any
	directory changes by the user. #95668

	* src/gnome-utils/gnc-mdi-utils.c (various routines): When
	switching between MDI styles, the gnome MDI code creates and
	destroys widgets at will.  Because of this, remember the list of
	menu/toolbar *names* to be modified and then look up the widgets
	each time a change needs to be made to the visibility/sensitivity
	of the item. #96302